Lagrer besteberegning entiteter i besteberegning steget (#38)